[package]
name = "sakya_pandita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
# antlr-rust = "0.3.0-beta"
assert_float_eq = "1.1.3"
conv = "0.3.3"
malachite = { version = "0.4.4", features = ["naturals_and_integers", "malachite-nz", "rationals", "malachite-q"] }
ordered-float = "4.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
